# ideaflow

./: .gitignore  README.md  analysis_options.yaml  build_log.txt  firebase.json  pub_get_log.txt  pubspec.yaml
android/app/: build.gradle.kts  google-services.json
android/app/src/main/: AndroidManifest.xml
lib/: firebase_options.dart  main.dart  providers.dart
lib/models/: models.dart  models.g.dart
lib/providers/: theme_provider.dart
lib/services/: ai_router_service.dart  auth_service.dart  firebase_service.dart  groq_service.dart  hive_service.dart  offline_ai_service.dart  secure_storage_service.dart  sync_service.dart  tts_service.dart  voice_service.dart  watson_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: inference.dart
lib/ui/: auth_gate.dart  conversational_screen.dart  home_screen.dart  idea_details_screen.dart  idea_timeline_screen.dart  landing_page.dart  settings_screen.dart  splash_screen.dart  timeline_screen.dart
lib/ui/widgets/: recording_sheet.dart
rust/: Cargo.toml  build_errors.txt
rust/src/: frb_generated.rs
rust/src/api/: inference.rs  mod.rs
rust_backup/: frb_generated.dart
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_ideaflow.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_ideaflow.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
(+1 files in other folders)
