[package]
name = "rust_lib_ideaflow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0"
candle-core = "0.8.0"
candle-transformers = "0.8.0"
candle-nn = "0.8.0"
tokenizers = "0.20.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
